--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
 
 </head>
-<body>
+
 
 <nav class="navbar navbar-expand-lg navbar-light bg-white" style="border-bottom: 1px gray solid"> 
   <a class="navbar-brand" href="#" class="logo"> <img src="resources/logo.png" style="margin-left: 300px"> </a>
@@ -25,26 +25,46 @@
 	<a class="navbar-brand" href="#" class="6"> <img src="resources/6.png" style="margin-left: 200px"> </a>
     </div>
     </nav>
+<div class="XjzKX" class="circle">
 
-<ul style="list-style-type:square" >
-	<h4 align="center">EBS Integrator</h4><br>
-<h6 align="center">
-	▪️MVP Builds<br>
-▪️Feature Web and Mobile Production<br>
-▪️Application Refactoring<br>
-▪️System Redesign<br>
+<img src="resources/11.png" alt="">
+    </div>
+</div>
 
-  
-<a href="https://ebs-integrator.com/#home">ebs-integrator.com</a>
-</h6></ul>
+<div class="position">
+    <h2 >ebsintegrator</h2>
+    <a class="BY3EC " rel="nofollow" href="/accounts/login/?next=%2Febsintegrator%2F&amp;source=follow" tabindex="0"><button class="sqdOP  L3NKy   y3zKF     " type="button">Follow</button></a></div>
+
+
+<div class="-vDIg" class="distance" ><h4 >111 posts
+    177 followers
+    182 following</h4><br>
+    <h3>EBS Integrator</h3><br>
+    ▪️MVP Builds<br>
+        ▪️Feature Web and Mobile Production <br>
+        ▪️Application Refactoring <br>
+        ▪️System Redesign<br>
+    <a class="yLUwa" href="https://l.instagram.com/?u=http%3A%2F%2Febs-integrator.com%2F&amp;e=ATPpWItVsVVoqyvIzKjnE3yhlgh_7oqhG1rvuqZtL1kYyDC-7E8vrzRKKj4ANUcGHlf3eA7sq1HGWIr8&amp;s=1" page_id="profilePage" rel="me nofollow noopener noreferrer" target="_blank" >
+        ebs-integrator.com</a></div>
+
+<div align="center" class="tag"><a class="_9VEo1 T-jvg" href="/ebsintegrator/" tabindex="0"><span class="smsjF"><svg aria-label="Posts" class="_8-yf5 " fill="#262626" height="12" viewBox="0 0 48 48" width="12">
+    <path clip-rule="evenodd" d="M45 1.5H3c-.8 0-1.5.7-1.5 1.5v42c0 .8.7 1.5 1.5 1.5h42c.8 0 1.5-.7 1.5-1.5V3c0-.8-.7-1.5-1.5-1.5zm-40.5 3h11v11h-11v-11zm0 14h11v11h-11v-11zm11 25h-11v-11h11v11zm14 0h-11v-11h11v11zm0-14h-11v-11h11v11zm0-14h-11v-11h11v11zm14 28h-11v-11h11v11zm0-14h-11v-11h11v11zm0-14h-11v-11h11v11z" fill-rule="evenodd"></path></svg>
+    <span class="PJXu4">Posts</span></span></a><a class="_9VEo1 " href="/accounts/login/?next=%2Febsintegrator%2Ftagged%2F&amp;source=profile_tagged_tab" tabindex="0"><span class="qzihg"><svg aria-label="Tagged" class="_8-yf5 " fill="#8e8e8e" height="12" viewBox="0 0 48 48" width="12">
+    <path d="M41.5 5.5H30.4c-.5 0-1-.2-1.4-.6l-4-4c-.6-.6-1.5-.6-2.1 0l-4 4c-.4.4-.9.6-1.4.6h-11c-3.3 0-6 2.7-6 6v30c0 3.3 2.7 6 6 6h35c3.3 0 6-2.7 6-6v-30c0-3.3-2.7-6-6-6zm-29.4 39c-.6 0-1.1-.6-1-1.2.7-3.2 3.5-5.6 6.8-5.6h12c3.4 0 6.2 2.4 6.8 5.6.1.6-.4 1.2-1 1.2H12.1zm32.4-3c0 1.7-1.3 3-3 3h-.6c-.5 0-.9-.4-1-.9-.6-5-4.8-8.9-9.9-8.9H18c-5.1 0-9.4 3.9-9.9 8.9-.1.5-.5.9-1 .9h-.6c-1.7 0-3-1.3-3-3v-30c0-1.7 1.3-3 3-3h11.1c1.3 0 2.6-.5 3.5-1.5L24 4.1 26.9 7c.9.9 2.2 1.5 3.5 1.5h11.1c1.7 0 3 1.3 3 3v30zM24 12.5c-5.3 0-9.6 4.3-9.6 9.6s4.3 9.6 9.6 9.6 9.6-4.3 9.6-9.6-4.3-9.6-9.6-9.6zm0 16.1c-3.6 0-6.6-2.9-6.6-6.6 0-3.6 2.9-6.6 6.6-6.6s6.6 2.9 6.6 6.6c0 3.6-3 6.6-6.6 6.6z">
+    </path></svg><span class="_08DtY">Tagged</span></span></a></div><br>
+<br>
+<br>
+<br>
+
 
 
 
 	<div class="gallery-section">
 		<div class="inner-width">
-			
+            <div class="border">
 
-<div class="border">
+
+
 	<div class="gallery">
     <a href="resources/1.jpg" class="image"> <img src="resources/1.jpg" alt=""></a>
     <a href="resources/2.jpg" class="image"> <img src="resources/2.jpg" alt=""></a>
@@ -116,6 +136,7 @@ span.onclick = function() {
 				}
 			});
     </script>
+    <div></div>
     
 		
 </body>
